[package]
name = "bacnet_parse"
version = "0.2.0"
authors = ["Jan Tache <j.andreitabs@gmail.com>"]
homepage = "https://github.com/jtroo/bacnet_parse"
repository = "https://github.com/jtroo/bacnet_parse"
description = "no_std BACnet parser"
categories = ["network-programming", "parser-implementations"]
documentation = "https://docs.rs/bacnet_parse"
license = "MPL-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.5"
log = "0.4.19"

[package.metadata.docs.rs]
all-features = true
